--- a/requirements.txt
+++ b/requirements.txt
@@ -2,22 +2,22 @@ absl-py==0.13.0
 aequitas==0.42.0
 alabaster==0.7.12
 altair==4.1.0
-anaconda-client==1.7.2
-anaconda-navigator==2.0.3
-anaconda-project==0.9.1
+anaconda-client==1.9.0
+anaconda-navigator==2.1.0
+anaconda-project==0.10.1
 anyio==2.2.0
 appdirs==1.4.4
 argh==0.26.2
 argon2-cffi==20.1.0
 asn1crypto==1.4.0
-astroid==2.5
-astropy==4.2.1
+astroid==2.6.6
+astropy==4.3.1
 astunparse==1.6.3
 async-generator==1.10
 atomicwrites==1.4.0
-attrs==20.3.0
+attrs==21.2.0
 autopep8==1.5.6
-Babel==2.9.0
+Babel==2.9.1
 backcall==0.2.0
 backports.functools-lru-cache==1.6.4
 backports.shutil-get-terminal-size==1.0.0
@@ -26,13 +26,13 @@ backports.weakref==1.0.post1
 backports.zoneinfo==0.2.1
 bayesian-optimization==1.1.0
 bcrypt==3.2.0
-beautifulsoup4==4.9.3
-bitarray==1.9.2
+beautifulsoup4==4.10.0
+bitarray==2.3.0
 bkcharts==0.2
 black==19.10b0
-bleach==3.3.0
+bleach==4.0.0
 blis==0.7.4
-bokeh==2.3.2
+bokeh==2.4.1
 Boruta==0.3
 boto==2.49.0
 Bottleneck==1.3.2
@@ -40,27 +40,29 @@ Brotli==1.0.9
 brotlipy==0.7.0
 cachetools==4.2.2
 catalogue==2.0.4
-certifi==2020.12.5
-cffi==1.14.5
+certifi==2021.10.8
+cffi==1.14.6
 chardet==4.0.0
-click==7.1.2
-cloudpickle==1.6.0
+charset-normalizer==2.0.4
+click==8.0.3
+cloudpickle==2.0.0
 clyent==1.2.2
 colorama==0.4.4
-comtypes==1.1.9
+comtypes==1.1.10
 conda==4.10.3
-conda-build==3.21.4
+conda-build==3.21.5
 conda-content-trust==0+unknown
+conda-pack==0.6.0
 conda-package-handling==1.7.3
 conda-repo-cli==1.0.4
 conda-token==0.3.0
 conda-verify==3.4.2
 conllu==4.4
 contextlib2==0.6.0.post1
-cryptography==3.4.7
+cryptography==3.4.8
 cycler==0.10.0
 cymem==2.0.5
-Cython==0.29.23
+Cython==0.29.24
 cytoolz==0.11.0
 dash==1.21.0
 dash-bootstrap-components==0.12.2
@@ -69,40 +71,43 @@ dash-core-components==1.17.1
 dash-daq==0.5.0
 dash-html-components==1.1.4
 dash-table==4.12.0
-dask==2021.4.0
-decorator==5.0.6
+dask==2021.10.0
+debugpy==1.4.1
+decorator==5.1.0
 defusedxml==0.7.1
 dictset==0.3.1.2
 diff-match-patch==20200713
-distributed==2021.4.0
+distributed==2021.10.0
 docopt==0.6.2
-docutils==0.17
+docutils==0.17.1
 dominate==2.6.0
 dtale==1.53.0
 en-core-med7-lg==0.0.3
 en-ner-bc5cdr-md==0.4.0
 entrypoints==0.3
-et-xmlfile==1.0.1
+et-xmlfile==1.1.0
 fastcache==1.1.0
-filelock==3.0.12
+filelock==3.3.1
 flake8==3.9.0
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-Compress==1.10.1
 flask-ngrok==0.0.25
 flatbuffers==1.12
-fsspec==0.9.0
+fonttools==4.25.0
+fsspec==2021.8.1
 future==0.18.2
 gast==0.4.0
-gevent==21.1.2
+gevent==21.8.0
 glob2==0.7
+gmpy2==2.0.8
 google-api-core==2.1.1
 google-auth==1.32.1
 google-auth-oauthlib==0.4.4
 google-cloud-speech==2.10.0
 google-pasta==0.2.0
 googleapis-common-protos==1.53.0
-greenlet==1.0.0
+greenlet==1.1.1
 grpcio==1.34.1
 h5py==3.1.0
 HeapDict==1.0.1
@@ -110,42 +115,41 @@ html5lib==1.1
 htmlmin==0.1.12
 httplib2==0.19.1
 hyperopt==0.2.5
-idna==2.10
-imagecodecs==2021.3.31
+idna==3.2
+imagecodecs==2021.8.26
 ImageHash==4.2.1
 imageio==2.9.0
 imagesize==1.2.0
-importlib-metadata==3.10.0
+importlib-metadata==4.8.1
 iniconfig==1.1.1
 intervaltree==3.1.0
-ipykernel==5.3.4
-ipython==7.22.0
+ipykernel==6.4.1
+ipython==7.29.0
 ipython-genutils==0.2.0
 ipywebrtc==0.6.0
-ipywidgets==7.6.3
-isort==5.8.0
-itsdangerous==1.1.0
+ipywidgets==7.6.5
+isort==5.9.3
+itsdangerous==2.0.1
 jdcal==1.4.1
 jedi==0.17.2
 Jinja2==2.11.3
-joblib==1.0.1
+joblib==1.1.0
 Js2Py==0.71
-json5==0.9.5
+json5==0.9.6
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==6.1.12
+jupyter-client==7.0.1
 jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyter-packaging==0.7.12
+jupyter-core==4.8.1
 jupyter-server==1.4.1
-jupyterlab==3.0.14
+jupyterlab==3.2.1
 jupyterlab-pygments==0.1.2
-jupyterlab-server==2.4.0
+jupyterlab-server==2.8.2
 jupyterlab-widgets==1.0.0
 kaleido==0.2.1
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
-keyring==22.3.0
+keyring==23.1.0
 kiwisolver==1.3.1
 lazy-object-proxy==1.6.0
 libarchive-c==2.9
@@ -156,73 +160,76 @@ lxml==4.6.3
 lz4==3.1.3
 Markdown==3.3.4
 markdown2==2.3.5
-MarkupSafe==1.1.1
-matplotlib==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+matplotlib-inline==0.1.2
 mccabe==0.6.1
-menuinst==1.4.16
+menuinst==1.4.18
 millify==0.1.1
 missingno==0.4.2
 mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random==1.2.1
-mkl-service==2.3.0
+mkl-fft==1.3.1
+mkl-random==1.2.2
+mkl-service==2.4.0
 mock==4.0.3
-more-itertools==8.7.0
+more-itertools==8.10.0
 mpmath==1.2.1
 msgpack==1.0.2
 multimethod==1.4
 multipledispatch==0.6.0
+munkres==1.1.4
 murmurhash==1.0.5
 mypy-extensions==0.4.3
 navigator-updater==0.2.1
 nbclassic==0.2.6
 nbclient==0.5.3
-nbconvert==6.0.7
+nbconvert==6.1.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
-networkx==2.5
-nltk==3.6.1
+networkx==2.6.3
+nltk==3.6.5
 nmslib==2.1.1
 nose==1.3.7
-notebook==6.3.0
+notebook==6.4.5
 numba==0.53.1
 numexpr==2.7.3
-numpy==1.19.5
+numpy==1.21.2
 numpydoc==1.1.0
 oauthlib==3.1.1
 ohio==0.5.0
 olefile==0.46
 opencv-python==4.5.3.56
-openpyxl==3.0.7
+openpyxl==3.0.9
 opt-einsum==3.3.0
-packaging==20.9
-pandas==1.2.4
+packaging==21.0
+pandas==1.3.4
 pandas-profiling==3.0.0
 pandocfilters==1.4.3
 paramiko==2.7.2
 parso==0.7.0
 partd==1.2.0
-path==15.1.2
-pathlib2==2.3.5
+path==16.0.0
+pathlib2==2.3.6
 pathspec==0.7.0
+pathtools==0.1.2
 pathy==0.6.0
-patsy==0.5.1
+patsy==0.5.2
 pep8==1.7.1
 pexpect==4.8.0
 phik==0.12.0
 pickleshare==0.7.5
-Pillow==8.2.0
+Pillow==8.4.0
 pip==21.0.1
 pipwin==0.5.1
-pkginfo==1.7.0
+pkginfo==1.7.1
 plac==1.1.3
 plotly==5.1.0
 pluggy==0.13.1
 ply==3.11
 ppscore==1.2.0
 preshed==3.0.5
-prometheus-client==0.10.1
-prompt-toolkit==3.0.17
+prometheus-client==0.11.0
+prompt-toolkit==3.0.20
 proto-plus==1.19.5
 protobuf==3.17.3
 psutil==5.8.0
@@ -234,91 +241,92 @@ pybind11==2.6.1
 pycodestyle==2.6.0
 pycosat==0.6.3
 pycparser==2.20
-pycurl==7.43.0.6
+pycurl==7.44.1
 pydantic==1.8.2
-pydocstyle==6.0.0
-pyerfa==1.7.3
+pydocstyle==6.1.1
+pyerfa==2.0.0
 pyflakes==2.2.0
-Pygments==2.8.1
+Pygments==2.10.0
 pyjsparser==2.7.1
-pylint==2.7.4
+PyJWT==2.1.0
+pylint==2.9.6
 pyls-black==0.4.6
 pyls-spyder==0.3.2
 PyNaCl==1.4.0
 pyodbc==4.0.0-unsupported
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
+pyOpenSSL==21.0.0
+pyparsing==3.0.4
 PyPDF2==1.26.0
 PyPrind==2.11.3
 pyreadline==2.1
-pyrsistent==0.17.3
+pyrsistent==0.18.0
 pysbd==0.3.4
 pySmartDL==1.3.4
 PySocks==1.7.1
 pystaggrelite3==0.1.3
-pytest==6.2.3
-python-dateutil==2.8.1
+pytest==6.2.4
+python-dateutil==2.8.2
 python-jsonrpc-server==0.4.0
 python-language-server==0.36.2
-pytz==2021.1
+pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 pyvttbl==0.5.2.2
 PyWavelets==1.1.1
-pywin32==227
+pywin32==228
 pywin32-ctypes==0.2.0
 pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq==20.0.0
+PyYAML==6.0
+pyzmq==22.2.1
 QDarkStyle==2.8.1
 QtAwesome==1.0.2
-qtconsole==5.0.3
-QtPy==1.9.0
-regex==2021.4.4
+qtconsole==5.1.1
+QtPy==1.10.0
+regex==2021.8.3
 reportlab==3.6.1
-requests==2.25.1
+requests==2.26.0
 requests-oauthlib==1.3.0
-rope==0.18.0
+rope==0.19.0
 rsa==4.7.2
 Rtree==0.9.7
 ruamel-yaml-conda==0.15.100
-scikit-image==0.18.1
-scikit-learn==0.24.1
-scipy==1.6.2
+scikit-image==0.18.3
+scikit-learn==1.0.1
+scipy==1.7.1
 scispacy==0.4.0
-seaborn==0.11.1
-Send2Trash==1.5.0
-setuptools==52.0.0.post20210125
+seaborn==0.11.2
+Send2Trash==1.8.0
+setuptools==58.0.4
 shap==0.39.0
 simplegeneric==0.8.1
-singledispatch==0.0.0
+singledispatch==3.7.0
 sip==4.19.13
-six==1.15.0
+six==1.16.0
 slicer==0.0.7
 smart-open==5.1.0
 sniffio==1.2.0
 snowballstemmer==2.1.0
 sortedcollections==2.1.0
-sortedcontainers==2.3.0
+sortedcontainers==2.4.0
 sounddevice==0.4.3
 soupsieve==2.2.1
 spacy==3.0.7
 spacy-legacy==3.0.8
-Sphinx==4.0.1
+Sphinx==4.2.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
+sphinxcontrib-serializinghtml==1.1.5
 sphinxcontrib-websupport==1.2.4
 spyder==4.2.5
 spyder-kernels==1.10.2
-SQLAlchemy==1.4.7
+SQLAlchemy==1.4.22
 squarify==0.4.3
 srsly==2.4.1
-statsmodels==0.12.2
+statsmodels==0.13.0
 strsimpy==0.2.0
-sympy==1.8
+sympy==1.9
 tables==3.6.1
 tabulate==0.8.2
 tangled-up-in-unicode==0.1.0
@@ -331,36 +339,36 @@ tensorflow==2.5.0
 tensorflow-estimator==2.5.0
 termcolor==1.1.0
 terminado==0.9.4
-testpath==0.4.4
+testpath==0.5.0
 textdistance==4.2.1
 thinc==8.0.8
-threadpoolctl==2.1.0
+threadpoolctl==2.2.0
 three-merge==0.1.1
-tifffile==2021.4.8
+tifffile==2021.7.2
 toml==0.10.2
 toolz==0.11.1
 torch==1.10.0
 torchaudio==0.10.0
 tornado==6.1
-tqdm==4.59.0
-traitlets==5.0.5
+tqdm==4.62.3
+traitlets==5.1.0
 typed-ast==1.4.2
 typer==0.3.2
-typing-extensions==3.7.4.3
+typing-extensions==3.10.0.2
 typing-inspect==0.7.1
 tzdata==2021.5
 tzlocal==4.0.2
 ujson==4.0.2
 unicodecsv==0.14.1
-urllib3==1.26.4
+urllib3==1.26.7
 visions==0.7.1
 visitor==0.1.3
 wasabi==0.8.2
 watchdog==1.0.2
 wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==1.0.1
-wheel==0.36.2
+Werkzeug==2.0.2
+wheel==0.37.0
 widgetsnbextension==3.5.1
 win-inet-pton==1.1.0
 win-unicode-console==0.5
@@ -369,12 +377,12 @@ wrapt==1.12.1
 xarray==0.19.0
 xhtml2pdf==0.2.2
 xlrd==2.0.1
-XlsxWriter==1.3.8
-xlwings==0.23.0
+XlsxWriter==3.0.1
+xlwings==0.24.9
 xlwt==1.3.0
 xmltodict==0.12.0
 yapf==0.31.0
 zict==2.0.0
-zipp==3.4.1
+zipp==3.6.0
 zope.event==4.5.0
-zope.interface==5.3.0
+zope.interface==5.4.0
