--- a/requirements.txt
+++ b/requirements.txt
@@ -71,8 +71,8 @@ docopt==0.6.2
 docutils==0.17.1
 dominate==2.6.0
 dtale==1.53.0
-en-core-med7-lg==0.0.3
-en-ner-bc5cdr-md==0.4.0
+en-core-med7-lg
+en-ner-bc5cdr-md
 entrypoints==0.3
 et-xmlfile==1.1.0
 fastcache==1.1.0
