--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ google-cloud-speech==2.11.1
 googleapis-common-protos==1.53.0
 grpcio==1.41.1
 grpcio-status==1.41.1
+gunicorn==20.1.0
 httplib2==0.20.2
 idna==3.3
 itsdangerous==2.0.1
